--- a/code2.html
+++ b/code2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Teste 2</h1>
     <h2>Essa linha foi adicionada depois do commit</h2>
+    <h3>linha de teste</h3>
 </body>
 </html>
